@@ -81,7 +81,7 @@ class TagServiceTest {
             List<TagModel> result = tagService.findOrCreateTags(List.of(tagName));
 
             // then
-            assertThat(result.getFirst().getDeletedAt()).isNull();
+            assertThat(result.get(0).getDeletedAt()).isNull();
             assertBaseFields(result);
             then(tagRepository).should().saveAll(anyList());
         }
@@ -102,7 +102,7 @@ class TagServiceTest {
 
             // then
             assertThat(result).hasSize(1);
-            assertThat(result.getFirst().getName()).isEqualTo("SF");
+            assertThat(result.get(0).getName()).isEqualTo("SF");
             assertBaseFields(result);
             then(tagRepository).should(times(1)).findByName("SF");
             then(tagRepository).should().saveAll(anyList());
